[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "asyncio-thread-runner"
authors = [{name = "lemon24"}]
license = "BSD-3-Clause"
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["async", "sync", "asyncio", "runner", "thread"]
classifiers = [
    # "Development Status :: 5 - Production/Stable",
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    # "Typing :: Typed",
]

[project.urls]
Documentation = "https://github.com/lemon24/asyncio-thread-runner/blob/main/README.md"
Repository = "https://github.com/lemon24/asyncio-thread-runner"
Issues = "https://github.com/lemon24/asyncio-thread-runner/issues"
# Changelog = "https://github.com/lemon24/asyncio-thread-runner/blob/main/CHANGES.md"

[dependency-groups]
dev = [
    "pre-commit",
]
tests = [
    "pytest",
    "coverage",
]
typing = [
    "mypy",
]

[tool.coverage.run]
branch = true
source = ["asyncio_thread_runner", "tests"]

[tool.mypy]
files = ["src"]
show_error_codes = true
pretty = true
# strict = true

[tool.isort]
profile = "black"
py_version = 311
src_paths = ["src", "tests"]
